fix: add single style for selectors naming to rule 3.1 in html-and-css.md, add Meaningful naming of identifiers and classes to rule 3.2 in html-and-css.md, add Keep the names of identifiers and classes concise to rule 3.3 in html-and-css.md, update CSS according to BEM to rule 2.1 in html-and-css-extended.md

--- a/style.css
+++ b/style.css
@@ -4,50 +4,51 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa .description__img {
+.header .description__img {
   width: 100%;
 }
-.aaa .more_inf {
+.header .header__info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa {
+  .header {
     text-align: center;
   }
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task__label,
+.task__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.task-row__wrapper {
   display: flex;
 }
-.ul {
+.list {
   margin: 0;
   padding: 0px;
 }
 .list__li,
-.h3 {
+.subheading {
   list-style: none;
 }
-.input,
-.button{
+.input-task,
+.button-task{
   outline: none;
 }
-.button {
+.button-task {
   background: none;
   border: 0px;
   color: #888;
@@ -56,12 +57,12 @@
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-.button:hover {
+.button-task:hover {
   color: #3a3A3a;
 }
 /* Heading */
-.h3,
-.label[for="new-task"] {
+.subheading,
+.new-task__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +71,7 @@
   margin: 0;
   text-transform: uppercase;
 }
-.input[type="text"] {
+.text__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,12 +83,12 @@
   font-family: Lato, sans-serif;
   color: #888;
 }
-.input[type="text"]:focus {
+.text__input:focus {
   color: #333;
 }
 
 /* New Task */
-.label[for="new-task"] {
+.new-task__label {
   display: block;
   margin: 0 0 20px;
 }
@@ -109,43 +110,43 @@
   vertical-align: middle;
 }
 
-.list__li > .input[type="checkbox"] {
+.list__li > .checkbox__input {
   margin: 0 10px;
 }
-.list__li > .label {
+.list__li > .label-task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.list__li > .input[type="text"] {
+.list__li > .text__input {
   width: 226px;
 }
-.button.delete .img {
+.button.delete .task__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.button.delete .img:hover {
+.button.delete .task__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks .label {
+#completed-tasks .label-task {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.ul .list__li .input[type=text] {
+.list .list__li .text__input {
   display: none;
 }
 
-.ul .list__li .input[type=text] {
+.list .list__li .text__input {
   display: inline-block;
   width: 224px;
 }
 
-.ul .list__li .label {
+.list .list__li .label-task {
   display: none;
 }
